added layout customisation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,10 @@
         {% endif %}
       </header>
 
-      <section style="font-size: large >
+      <section>
+		  <large>
         {{ content }}
+        </large>
       </section>
 
       <footer>
