--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
-          <li><a class="buttons github" href="https://oldmill.cz">Back to the Blogs</a></li>
+          <li><a class="buttons github" href="https://oldmill.cz">List my Blogs</a></li>
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </ul>
 
