--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,8 @@
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    {% include goat.html %}
+    <script data-goatcounter="https://liborty.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
 
